--- a/src/styles/translator.css
+++ b/src/styles/translator.css
@@ -46,6 +46,7 @@ textarea {
 }
 .translator-container .custom-select {
   position: relative;
+  margin-bottom: 10px;
   width: 100%;
   height: 40px;
   overflow: hidden;
